Characterize exported launcher JavaFX display boundary
Add a NetBeans executable characterization that runs the generated exported launcher jar with real OpenJFX modules on the module path. The test accepts real Program.main reachability when a display runtime is available and otherwise records the bounded DISPLAY precondition before Program.main.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>